--- a/templates/home.html
+++ b/templates/home.html
@@ -2,16 +2,17 @@
 <html>
 <body>
 
-<h2>The select Element</h2>
+<h2>The percent of people in that State with a Bachelor's degree of higher</h2>
 <p>The select element defines a drop-down list:</p>
 
-<form action="/action_page.php">
-  <select name="cars">
+<form action="/">
+  <select name="state">
     {{candy}}
   </select>
   <br><br>
   <input type="submit">
 </form>
+{{funFactoid}}
 
 </body>
 </html>
